# FireflyEngine

./: .gitmodules  CMakeLists.txt  README.md  cmake_generate_VS2017.bat
FireflyEngine/: CMakeLists.txt  EngineConfig.h.template
FireflyEngine/include/: Application.h  Core.h  EntryPoint.h  FireflyEngine.h  Game.h  ImGuiLayer.h  Layer.h  Logger.h  pch.h
FireflyEngine/include/Core/: Application.h  Core.h  ImGuiLayer.h  Layer.h
FireflyEngine/include/Event/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
FireflyEngine/include/Firefly/: Engine.h  FireflyEngine.h  pch.h
FireflyEngine/include/Firefly/Core/: Application.h  Core.h  Engine.h  EntryPoint.h  EnumFlags.h  Logger.h  ResourceRegistry.h  Version.h
FireflyEngine/include/Firefly/Event/: Event.h  GamepadEvent.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
FireflyEngine/include/Firefly/Input/: Gamepad.h  GamepadButtonCodes.h  Input.h  KeyCodes.h  MouseButtonCodes.h
FireflyEngine/include/Firefly/Rendering/: Buffer.h  Camera.h  FrameBuffer.h  GraphicsContext.h  Material.h  Mesh.h  MeshGenerator.h  RenderFunctions.h  RenderPass.h  Renderer.h  RenderingAPI.h  Shader.h  Texture.h  VertexBuffer.h
FireflyEngine/include/Firefly/Rendering/OpenGL/: OpenGLBuffer.h  OpenGLContext.h  OpenGLFrameBuffer.h  OpenGLIndexBuffer.h  OpenGLMaterial.h  OpenGLMesh.h  OpenGLRenderFunctions.h  OpenGLRenderPass.h  OpenGLRenderer.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexBuffer.h
FireflyEngine/include/Firefly/Rendering/Vulkan/: VulkanBuffer.h  VulkanContext.h  VulkanDebugMessenger.h  VulkanDevice.h  VulkanFrameBuffer.h  VulkanInstance.h  VulkanMaterial.h  VulkanMesh.h  VulkanRenderObject.h  VulkanRenderPass.h  VulkanRenderer.h  VulkanShader.h  VulkanSurface.h  VulkanSwapchain.h  VulkanTexture.h  VulkanUtils.h
FireflyEngine/include/Firefly/Scene/: Camera.h  Entity.h  Scene.h
FireflyEngine/include/Firefly/Scene/Components/: Component.h  MaterialComponent.h  MeshComponent.h  TagComponent.h  TransformComponent.h
FireflyEngine/include/Firefly/Window/: Window.h  WindowsWindow.h
FireflyEngine/include/Input/: Input.h
FireflyEngine/include/Rendering/: GraphicsContext.h  IndexBuffer.h  Material.h  Mesh.h  Model.h  OpenGLContext.h  RenderFunctions.h  Renderer.h  RenderingAPI.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h
FireflyEngine/include/Rendering/OpenGL/: OpenGLRenderFunctions.h  OpenGLShader.h  OpenGLVertexArray.h
FireflyEngine/include/Scene/: Scene.h
FireflyEngine/include/Scene/Components/: MaterialComponent.h  MeshComponent.h  TransformComponent.h
FireflyEngine/include/Window/: Window.h  WindowsWindow.h
FireflyEngine/src/: Application.cpp  Core.h  EntryPoint.h  Game.cpp  Game.h  ImGuiLayer.cpp  Layer.cpp  Logger.cpp  test.cpp  test.h
FireflyEngine/src/Core/: Application.cpp  Engine.cpp  EntryPoint.cpp  ImGuiLayer.cpp  Layer.cpp  Logger.cpp
FireflyEngine/src/Input/: Gamepad.cpp  Input.cpp
FireflyEngine/src/Rendering/: Buffer.cpp  Camera.cpp  FrameBuffer.cpp  GraphicsContext.cpp  Material.cpp  Mesh.cpp  MeshGenerator.cpp  Model.cpp  OpenGLContext.cpp  RenderPass.cpp  Renderer.cpp  RenderingAPI.cpp  Shader.cpp  Texture.cpp
FireflyEngine/src/Rendering/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFrameBuffer.cpp  OpenGLIndexBuffer.cpp  OpenGLMaterial.cpp  OpenGLMesh.cpp  OpenGLRenderFunctions.cpp  OpenGLRenderPass.cpp  OpenGLRenderer.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
FireflyEngine/src/Rendering/Vulkan/: VulkanBuffer.cpp  VulkanContext.cpp  VulkanDebugMessenger.cpp  VulkanDevice.cpp  VulkanFrameBuffer.cpp  VulkanInstance.cpp  VulkanMaterial.cpp  VulkanMesh.cpp  VulkanRenderObject.cpp  VulkanRenderPass.cpp  VulkanRenderer.cpp  VulkanShader.cpp  VulkanSurface.cpp  VulkanSwapchain.cpp  VulkanTexture.cpp  VulkanUtils.cpp
FireflyEngine/src/Scene/: Camera.cpp  Entity.cpp  Scene.cpp
FireflyEngine/src/Window/: Window.cpp  WindowsWindow.cpp
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: drawNormals.frag  drawNormals.geom  drawNormals.vert  pbr.frag  pbr.glsl  pbr.vert  test.glsl  triangle.frag  triangle.vert
Sandbox/assets/shaders/OpenGL/: brdfLUT.frag  drawNormals.frag  drawNormals.geom  drawNormals.vert  environmentCubeMap.frag  environmentCubeMap.vert  hdrImageToCubeMap.frag  irradianceCubeMap.frag  irradianceCubeMap.vert  pbr.frag  pbr.vert  prefilterCubeMap.frag  prefilterCubeMap.vert  screenTexture.frag  screenTexture.vert
Sandbox/assets/shaders/Vulkan/: brdfLUT.frag  brdfLUT.vert  drawNormals.frag  drawNormals.geom  drawNormals.vert  environmentCubeMap.frag  environmentCubeMap.vert  hdrImageToCubeMap.frag  hdrImageToCubeMap.vert  irradianceCubeMap.frag  irradianceCubeMap.vert  pbr.frag  pbr.vert  prefilterCubeMap.frag  prefilterCubeMap.vert  screenTexture.frag  screenTexture.vert
Sandbox/include/: CameraController.h  SandboxApp.h
Sandbox/src/: CameraController.cpp  SandboxApp.cpp  SandboxGame.cpp  main.cpp
