cmake_minimum_required(VERSION 3.17)

#extract version numbers from git tag
execute_process(COMMAND git describe --tags --abbrev=0
				OUTPUT_VARIABLE TAG_VERSION
				OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND git rev-list ${TAG_VERSION}..HEAD --count
				OUTPUT_VARIABLE FIREFLY_PATCH_VERSION
				OUTPUT_STRIP_TRAILING_WHITESPACE)
string(REGEX MATCHALL "([0-9]+)" FIREFLY_VERSION_LIST ${TAG_VERSION})
list(GET FIREFLY_VERSION_LIST 0 FIREFLY_MAJOR_VERSION)
list(GET FIREFLY_VERSION_LIST 1 FIREFLY_MINOR_VERSION)

project(Firefly
	VERSION ${FIREFLY_MAJOR_VERSION}.${FIREFLY_MINOR_VERSION}.${FIREFLY_PATCH_VERSION}
	LANGUAGES CXX)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory(FireflyEngine)
add_subdirectory(Sandbox)